ロゴ追加、ページ構成変更
ロゴ追加して、ページ構成の大枠を検討、反映

--- a/styles.css
+++ b/styles.css
@@ -62,8 +62,8 @@ a img{
 
 
 .android-logo-image {
-  height: 28px;
-  width: 140px;
+  width: 180px;
+  filter: drop-shadow(10px 10px 10px rgba(0,0,0,0.2));
 }
 
 
@@ -172,17 +172,17 @@ a img{
 
 .android-be-together-section {
   position: relative;
-  height: 800px;
+  height: 400px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/slide01.jpg') center 30% no-repeat;
+  background: url('images/door.jpeg') center 30% no-repeat;
   background-size: cover;
 }
 
 .logo-font {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
   line-height: 1;
-  color: #767777;
+  color: #424242;
   font-weight: 500;
 }
 
@@ -209,8 +209,8 @@ a img{
 
 .android-screen-section {
   position: relative;
-  padding-top: 60px;
   padding-bottom: 80px;
+  background-color: aqua;
 }
 
 .android-screens {
@@ -476,9 +476,9 @@ a img{
 
   .android-mobile-title {
     display: block !important;
-    position: absolute;
-    left: calc(50% - 70px);
-    top: 12px;
+    position: fixed;
+    left: calc(50% - 85px);
+    /* top: 12px; */
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -503,13 +503,13 @@ a img{
   }
 
   .android-be-together-section {
-    height: 350px;
+    height: 250px;
   }
 
   .android-slogan {
     font-size: 26px;
     margin: 0 16px;
-    padding-top: 24px;
+    padding-top: 100px;
   }
 
   .android-sub-slogan {
