--- a/styles.css
+++ b/styles.css
@@ -16,35 +16,32 @@
 
 body {
   margin: 0;
+  background-image: url('images/background.jpg');
+  background-attachment: fixed;
+  background-repeat: repeat;
 }
 
-/* Disable ugly boxes around images in IE10 */
-a img{
-  border: 0px;
+h1 {
+  color: #00bfa5;
+  letter-spacing: -.05em;
+  font-weight: 500;
+  font-size: 35px;
 }
 
-::-moz-selection {
-  background-color: #6ab344;
-  color: #fff;
+.mdl-layout__drawer-button {
+  display: none;
 }
 
-::selection {
-  background-color: #6ab344;
-  color: #fff;
+.mdl-layout__header-row .mdl-navigation__link {
+  color: #424242;
 }
 
-.android-search-box .mdl-textfield__input {
-  color: rgba(0, 0, 0, 0.87);
+.mdl-layout__header-row .mdl-navigation {
+  /* margin-left: 400px; */
 }
 
-.android-header .mdl-menu__container {
-  z-index: 50;
-  margin: 0 !important;
-}
-
-
-.mdl-textfield--expandable {
-  width: auto;
+.mdl-layout__header-row {
+  justify-content:space-between ;
 }
 
 .android-fab {
@@ -61,114 +58,41 @@ a img{
 }
 
 
-.android-logo-image {
-  width: 180px;
-  filter: drop-shadow(10px 10px 10px rgba(0,0,0,0.2));
-}
-
 
 .android-header {
   overflow: visible;
   background-color: white;
 }
 
-  .android-header .material-icons {
-    color: #767777 !important;
-  }
+.android-header .material-icons {
+  color: #767777 !important;
+}
 
-  .android-header .mdl-layout__drawer-button {
-    background: transparent;
-    color: #767777;
-  }
+.android-header .mdl-layout__drawer-button {
+  background: transparent;
+  color: #767777;
+}
 
-  .android-header .mdl-navigation__link {
-    color: #757575;
-    font-weight: 700;
-    font-size: 14px;
-  }
-
-  .android-navigation-container {
-    /* Simple hack to make the overflow happen to the left instead... */
-    direction: rtl;
-    -webkit-order: 1;
-        -ms-flex-order: 1;
-            order: 1;
-    width: 500px;
-    transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
-        width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .android-navigation {
-    /* ... and now make sure the content is actually LTR */
-    direction: ltr;
-    -webkit-justify-content: flex-end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    width: 800px;
-  }
-
-  .android-search-box.is-focused + .android-navigation-container {
-    opacity: 0;
-    width: 100px;
-  }
-
-
-  .android-navigation .mdl-navigation__link {
-    display: inline-block;
-    height: 60px;
-    line-height: 68px;
-    background-color: transparent !important;
-    border-bottom: 4px solid transparent;
-  }
-
-    .android-navigation .mdl-navigation__link:hover {
-      border-bottom: 4px solid #8bc34a;
-    }
-
-  .android-search-box {
-    -webkit-order: 2;
-        -ms-flex-order: 2;
-            order: 2;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .android-more-button {
-    -webkit-order: 3;
-        -ms-flex-order: 3;
-            order: 3;
-  }
-
+.android-navigation-container {
+  /* Simple hack to make the overflow happen to the left instead... */
+  /* direction: rtl; */
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+  width: 500px;
+  transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
+      width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .android-drawer {
   border-right: none;
 }
 
-  .android-drawer-separator {
-    height: 1px;
-    background-color: #dcdcdc;
-    margin: 8px 0;
-  }
+.android-drawer .mdl-navigation__link.mdl-navigation__link {
+  font-size: 14px;
+  color: #424242;
+}
 
-  .android-drawer .mdl-navigation__link.mdl-navigation__link {
-    font-size: 14px;
-    color: #757575;
-  }
-
-  .android-drawer span.mdl-navigation__link.mdl-navigation__link {
-    color: #8bc34a;
-  }
-
-  .android-drawer .mdl-layout-title {
-    position: relative;
-    background: #6ab344;
-    height: 160px;
-  }
-
-    .android-drawer .android-logo-image {
-      position: absolute;
-      bottom: 16px;
-    }
 
 .android-be-together-section {
   position: relative;
@@ -196,278 +120,47 @@ a img{
   padding-top: 24px;
 }
 
-.android-create-character {
-  font-size: 21px;
-  padding-top: 400px;
-}
-
-  .android-create-character a {
-    text-decoration: none;
-    color: #767777;
-    font-weight: 300;
-  }
-
 .android-screen-section {
   position: relative;
   padding-bottom: 80px;
   background-color: aqua;
 }
 
-.android-screens {
-  text-align: right;
-  width: 100%;
-  white-space: nowrap;
-  overflow-x: auto;
+.android-footer a:hover {
+  color: #8bc34a;
 }
 
-.android-screen {
-  text-align: center;
+.android-footer .mdl-mega-footer--top-section::after {
+  border-bottom: none;
 }
 
-.android-screen .android-link {
-  margin-top: 16px;
-  display: block;
-  z-index: 2;
+.android-footer .mdl-mega-footer--middle-section::after {
+  border-bottom: none;
 }
 
-.android-image-link {
-  text-decoration: none;
-}
-
-.android-wear {
-  display: inline-block;
-  width: 160px;
-  margin-right: 32px;
-}
-
-  .android-wear .android-screen-image {
-    width: 40%;
-    z-index: 1;
-  }
-
-
-.android-phone {
-  display: inline-block;
-  width: 64px;
-  margin-right: 48px;
-}
-
-  .android-phone .android-screen-image {
-    width: 100%;
-    z-index: 1;
-  }
-
-
-.android-tablet {
-  display: inline-block;
-  width: 110px;
-  margin-right: 64px;
-}
-
-  .android-tablet .android-screen-image {
-    width: 100%;
-    z-index: 1;
-  }
-
-  .android-tablet .android-link {
-    display: block;
-    z-index: 2;
-  }
-
-
-.android-tv {
-  display: inline-block;
-  width: 300px;
-  margin-right: 80px;
-}
-
-  .android-tv .android-screen-image {
-    width: 100%;
-    z-index: 1;
-  }
-
-
-.android-auto {
-  display: inline-block;
-  width: 300px;
-  overflow: hidden;
-}
-
-  .android-auto .android-screen-image {
-    display: block;
-    height: 300px;
-    z-index: 1;
-  }
-
-
-.android-wear-section {
-  position: relative;
-  background: url('images/wear.png') center top no-repeat;
-  background-size: cover;
-  height: 800px;
-}
-
-.android-wear-band {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  background-color: #37474f;
-}
-
-.android-wear-band-text {
-  max-width: 800px;
-  margin-left: 25%;
-  padding: 24px;
-  text-align: left;
-  color: white;
-}
-
-  .android-wear-band-text p {
-    padding-top: 8px;
-  }
-
-.android-link {
-  text-decoration: none;
-  color: #8bc34a !important;
-}
-
-  .android-link:hover {
-    color: #7cb342 !important;
-  }
-
-  .android-link .material-icons {
-    position: relative;
-    top: -1px;
-    vertical-align: middle;
-  }
-
-.android-alt-link {
-  text-decoration: none;
-  color: #64ffda !important;
-  font-size: 16px;
-}
-
-  .android-alt-link:hover {
-    color: #00bfa5 !important;
-  }
-
-  .android-alt-link .material-icons {
-    position: relative;
-    top: 6px;
-  }
-
-.android-customized-section {
-  text-align: center;
-}
-
-.android-customized-section-text {
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 80px 16px 0 16px;
-}
-
-  .android-customized-section-text p {
-    padding-top: 16px;
-  }
-
-.android-customized-section-image {
-  background: url('images/devices.jpg') center top no-repeat;
-  background-size: cover;
-  height: 400px;
-}
-
-.android-more-section {
-  padding: 80px 0;
-  max-width: 1044px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-  .android-more-section .android-section-title {
-    margin-left: 12px;
-    padding-bottom: 24px;
-  }
-
-.android-card-container {
-}
-
-  .android-card-container .mdl-card__media {
-    overflow: hidden;
-    background: transparent;
-  }
-
-    .android-card-container .mdl-card__media img {
-      width: 100%;
-    }
-
-  .android-card-container .mdl-card__title {
-    background: transparent;
-    height: auto;
-  }
-
-  .android-card-container .mdl-card__title-text {
-    color: black;
-    height: auto;
-  }
-
-  .android-card-container .mdl-card__supporting-text {
-    height: auto;
-    color: black;
-    padding-bottom: 56px;
-  }
-
-  .android-card-container .mdl-card__actions {
-    position: absolute;
-    bottom: 0;
-  }
-
-  .android-card-container .mdl-card__actions a {
-    border-top: none;
-    font-size: 16px;
-  }
-
-.android-footer {
-  background-color: #fafafa;
+.android-footer .mdl-mega-footer--bottom-section {
   position: relative;
 }
 
-  .android-footer a:hover {
-    color: #8bc34a;
-  }
-
-  .android-footer .mdl-mega-footer--top-section::after {
-    border-bottom: none;
-  }
-
-  .android-footer .mdl-mega-footer--middle-section::after {
-    border-bottom: none;
-  }
-
-  .android-footer .mdl-mega-footer--bottom-section {
-    position: relative;
-  }
-
-  .android-footer .mdl-mega-footer--bottom-section a {
-    margin-right: 2em;
-  }
-
-  .android-footer .mdl-mega-footer--right-section a .material-icons {
-    position: relative;
-    top: 6px;
-  }
-
-
-.android-link-menu:hover {
-  cursor: pointer;
+.android-footer .mdl-mega-footer--bottom-section a {
+  margin-right: 2em;
 }
+
+.android-footer .mdl-mega-footer--right-section a .material-icons {
+  position: relative;
+  top: 6px;
+}
+
 
 
 /**** Mobile layout ****/
 @media (max-width: 900px) {
   .android-navigation-container {
     display: none;
+  }
+
+  .mdl-layout__drawer-button {
+    display: block;
   }
 
   .android-title {
@@ -478,28 +171,7 @@ a img{
     display: block !important;
     position: fixed;
     left: calc(50% - 85px);
-    /* top: 12px; */
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  /* WebViews in iOS 9 break the "~" operator, and WebViews in OS X 10.10 break
-     consecutive "+" operators in some cases. Therefore, we need to use both
-     here to cover all the bases. */
-  .android.android-search-box.is-focused ~ .android-mobile-title,
-  .android-search-box.is-focused + .android-navigation-container + .android-mobile-title {
-    opacity: 0;
-  }
-
-  .android-more-button {
-    display: none;
-  }
-
-  .android-search-box.is-focused {
-    width: calc(100% - 48px);
-  }
-
-  .android-search-box .mdl-textfield__expandable-holder {
-    width: 100%;
   }
 
   .android-be-together-section {
@@ -518,25 +190,8 @@ a img{
     padding-top: 8px;
   }
 
-  .android-create-character {
-    padding-top: 200px;
-    font-size: 16px;
-  }
-
-  .android-create-character img {
-    height: 12px;
-  }
-
   .android-fab {
     display: none;
   }
 
-  .android-wear-band-text {
-    margin-left: 0;
-    padding: 16px;
-  }
-
-  .android-footer .mdl-mega-footer--bottom-section {
-    display: none;
-  }
 }
