--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,17 @@
  * limitations under the License.
  */
 
+/* 動作確認用 */
+.blue {
+  background-color: #ffffff;
+  /* background-color: #00bfa5; */
+  height: 100%;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: left;
+}
+/* 動作確認用 */
+
 body {
   margin: 0;
   background-image: url('images/background.jpg');
@@ -26,6 +37,10 @@ h1 {
   letter-spacing: -.05em;
   font-weight: 500;
   font-size: 35px;
+}
+
+h3 {
+  font-size: 30px;
 }
 
 .h1-style {
@@ -50,6 +65,7 @@ h1 {
 .mdl-layout__header-row {
   justify-content:space-between ;
 }
+
 
 .android-fab {
   position: absolute;
@@ -129,10 +145,10 @@ h1 {
 
 .android-screen-section {
   position: relative;
-  padding-bottom: 80px;
+  /* padding-bottom: 80px; */
   /* background-color: aqua; */
   background-color: #ffffff;
-  height:400px;
+  height:600px;
 }
 
 .android-footer a:hover {
@@ -164,6 +180,14 @@ h1 {
 
 /**** Mobile layout ****/
 @media (max-width: 900px) {
+  /* 動作確認用 */
+  .blue {
+    margin-left: 5%;
+    margin-right: 5%;
+    /* text-align: left; */
+  }
+  /* 動作確認用 */
+
   .android-navigation-container {
     display: none;
   }
@@ -185,17 +209,18 @@ h1 {
 
   .android-be-together-section {
     height: 400px;
+    text-align: left;
   }
 
   .android-slogan {
     font-size: 26px;
     margin: 0 16px;
-    padding-top: 100px;
+    padding-top: 150px;
   }
 
   .android-sub-slogan {
     font-size: 16px;
-    margin: 0 16px;
+    margin: 0 5%;
     padding-top: 8px;
   }
 
