--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,21 @@
 .blue {
   background-color: #ffffff;
   /* background-color: #00bfa5; */
-  height: 100%;
-  margin-left: 20%;
-  margin-right: 20%;
+  height: calc(100% - 29px);
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: left;
+}
+
+.space {
+  height: 5px;
+  margin-top: 24px;
 }
 /* 動作確認用 */
 
+/* ------------------ */
+/* ▼▼▼基本設定 */
 body {
   margin: 0;
   background-image: url('images/background.jpg');
@@ -39,16 +47,26 @@ h1 {
   font-size: 35px;
 }
 
-h3 {
-  font-size: 30px;
+h2 {
+  /* margin-top: 24px; */
+  margin-bottom: 10px;
 }
 
-.h1-style {
-  color: #00bfa5;
-  letter-spacing: -.05em;
-  font-weight: 500;
-  font-size: 35px;
+h3 {
+  font-size: 22px;
+  margin-bottom: 0px;
 }
+
+p {
+  font-size: 16px;
+}
+
+/* 基本設定 */
+/* ------------------ */
+
+/* .android-content {
+  padding: 0.1px;
+} */
 
 .mdl-layout__drawer-button {
   display: none;
@@ -135,7 +153,7 @@ h3 {
 
 .android-slogan {
   font-size: 60px;
-  padding-top: 160px;
+  padding-top: 140px;
 }
 
 .android-sub-slogan {
@@ -184,6 +202,7 @@ h3 {
   .blue {
     margin-left: 5%;
     margin-right: 5%;
+    width: auto;
     /* text-align: left; */
   }
   /* 動作確認用 */
