コンテンツ修正

--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ p {
   height: 400px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('images/door.jpeg') center 30% no-repeat;
+  background: url('images/door2.jpeg') center 30% no-repeat;
   background-size: cover;
 }
 
