--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,21 @@ p {
   padding: 0.1px;
 } */
 
+.mdl-layout__header-row .mdl-navigation__link {
+  line-height: unset;
+}
+
+.mdl-typography--text-uppercase {
+  text-transform: unset;
+}
+
 .mdl-layout__drawer-button {
   display: none;
 }
 
 .mdl-layout__header-row .mdl-navigation__link {
   color: #424242;
+  font-size: 16px;
 }
 
 .mdl-navigation {
@@ -164,7 +173,7 @@ p {
 .android-screen-section {
   position: relative;
   background-color: #ffffff;
-  height:600px;
+  height:700px;
 }
 
 .android-screen-section.about {
